--- a/src/Component/App/index.scss
+++ b/src/Component/App/index.scss
@@ -1,5 +1,5 @@
 #app{
-	
+	height:100%;
 	body, ul, li, ol, dl, dt, dd, h1, h2, h3, h4, h5, h6, a, img, input, figure, figcaption, p {
 	padding: 0;
 	margin: 0;
@@ -127,32 +127,4 @@ section{
 
 	}
 	
-	.show{
-		// display:block;
-		animation:show 1s both;
-	}
-	@keyframes show{
-		from{
-			transform:translateX(-100%);
-		}
-		to{
-			transform:translateX(0px);
-		}
-	}
-	.hide{
-		// display:none;
-		animation:hide 1s both;
-	}
-	@keyframes hide{
-		from{
-			transform:translateX(0);
-		}
-		to{
-			transform:translateX(-100%);
-		}
-	}
 }
-// .suiyi{
-// 	   color:#de3031;
-// 	   // display:inline-block;
-// 	  }
