--- a/src/Component/Login/index.scss
+++ b/src/Component/Login/index.scss
@@ -1,4 +1,5 @@
 #login{
+	height:1000px;
 	body{
 		overflow:-Scroll;overflow-y:hidden;
 	}
@@ -68,18 +69,18 @@
 		input:focus{
 			text-shadow:0px 0px 0px green;
 		}
-		::-webkit-input-placeholder {
-		    text-shadow: 0px 0px 0px  #999!important;
-		}
-		:-moz-placeholder { 
-		   text-shadow: 0px 0px 0px  #999!important;
-		}
-		::-moz-placeholder { 
-		    text-shadow: 0px 0px 0px #999!important;
-		}
-		:-ms-input-placeholder { 
-		    text-shadow: 0px 0px 0px  #999!important;
-		}
+		// ::-webkit-input-placeholder {
+		//     text-shadow: 0px 0px 0px  #999!important;
+		// }
+		// :-moz-placeholder { 
+		//    text-shadow: 0px 0px 0px  #999!important;
+		// }
+		// ::-moz-placeholder { 
+		//     text-shadow: 0px 0px 0px #999!important;
+		// }
+		// :-ms-input-placeholder { 
+		//     text-shadow: 0px 0px 0px  #999!important;
+		// }
 		.yi{
 			float: right;
 			width: 3.63rem;
