--- a/src/Component/App/index.scss
+++ b/src/Component/App/index.scss
@@ -1,5 +1,6 @@
 #app{
 	height:100%; 
+	display:flex;
 	body, ul, li, ol, dl, dt, dd, h1, h2, h3, h4, h5, h6, a, img, input, figure, figcaption, p {
 	padding: 0;
 	margin: 0;
