--- a/src/Component/Home/index.scss
+++ b/src/Component/Home/index.scss
@@ -92,6 +92,7 @@
 			display: inline-block;
 			width: 100%;
 			height: 2.5rem;
+			position:relative;
 			.dong{
 				overflow:-Scroll;overflow-y:hidden;
 				width: 100%;
@@ -100,7 +101,12 @@
 				background-repeat: no-repeat;
 				background-position: center;
 				text-align: center;
-				position: relative;
+				position: absolute;
+				#canvas{
+					position:absolute;
+					top: 0rem;
+					left: .6rem;
+				}
 				.up{
 					font-size: .17rem;
 					font-weight: 500;
