--- a/src/Component/Investmentproject/index.scss
+++ b/src/Component/Investmentproject/index.scss
@@ -1,4 +1,5 @@
 #investmentproject{
+	padding-top:90px;
 	*{
 		margin:0;
 		padding:0;
@@ -16,7 +17,7 @@
 				padding:40px 0 0 20px;
 				.del-img{
 					position:absolute;
-					background:url(../../assets/img/products-type.png);
+					background:url(https://static.fangjs.com/fjsfp/static/m/v1.1.4/img/index/products-type.png);
 					background-position: 0 	20px;
 					background-size: cover;
 					left:0;
