--- a/src/Component/Login/index.scss
+++ b/src/Component/Login/index.scss
@@ -63,11 +63,11 @@
 		input{
 			border: none;
 			outline: medium;
-			text-shadow: 0px 0px 0px blue;
+			text-shadow: 0px 0px 0px hotpink;
 			-webkit-text-fill-color: transparent;
 		}
 		input:focus{
-			text-shadow:0px 0px 0px green;
+			text-shadow:0px 0px 0px purple;
 		}
 		// ::-webkit-input-placeholder {
 		//     text-shadow: 0px 0px 0px  #999!important;
