--- a/src/Component/Regist/index.scss
+++ b/src/Component/Regist/index.scss
@@ -84,6 +84,14 @@
 						font-size: .14rem;
 						text-indent: .1rem;
 					}
+					.ts1{
+						display: none;
+						color:red;
+						height:25px;
+						text-align:center;
+						// z-index:99;
+						 font-size:22px;
+					}
 				}
 				label{
 					float: left;
@@ -133,6 +141,14 @@
 						font-size: .14rem;
 						text-indent: .1rem;
 					}
+					.ts2{
+						display: none;
+						color:red;
+						height:25px;
+						text-align:center;
+						// z-index:99;
+						 font-size:22px;
+					}
 				}
 				.san{
 					float: right;
@@ -148,6 +164,24 @@
 						font-size: .14rem;
 						text-indent: .1rem;
 					}
+					.ts3{
+						display: none;
+						color:red;
+						height:25px;
+						text-align:center;
+						// z-index:99;
+						 font-size:22px;
+					}
+				}
+				.si{
+					.ts4{
+						display: none;
+						color:red;
+						height:25px;
+						text-align:center;
+						// z-index:99;
+						 font-size:22px;
+					}
 				}
 				.wu{
 					float: right;
@@ -162,6 +196,14 @@
 						color: #000;
 						font-size: .14rem;
 						text-indent: .1rem;
+					}
+					.ts5{
+						display: none;
+						color:red;
+						height:25px;
+						text-align:center;
+						// z-index:99;
+						 font-size:22px;
 					}
 				}
 				.liu{
