--- a/src/Component/App/index.scss
+++ b/src/Component/App/index.scss
@@ -67,16 +67,104 @@
     // -webkit-box-flex: 1;
     // -ms-flex: 1;
     }
-    .addIcon{
-    	position:absolute;
-    	top:10px;
-    	right:20px;
-    	display: block;
-    	height:37px;
-    	width:36px;
-    	zoom:1.5;
-    	background:url(../../assets/img/download.png)
-    }
+    #headNav{
+    			width:100%;
+    			height:200px;
+    			position:fixed;
+    			top:1px;
+    			text-align: center;
+    			transition:all .2s;
+    			transform-origin: top;
+    			// transform:scaleY(0);
+    			background:#fff;
+    			
+    		}
+            nav{
+                position: fixed;
+                width: 100%;
+                height: 15%;
+                // left:0px;
+                top:0px;
+                margin-top:84px;
+                background-color:#fff;
+                z-index: 5;
+                ul{
+                    color:#3d3d3d;
+
+                    a{
+                        text-decoration: none;
+                        color:#3d3d3d;
+                            height:30px;
+                        &:visited{
+                            color:#3d3d3d;
+                            height:30px;
+                        }
+                        &:link{
+                            color:#3d3d3d;
+                        }
+                    }
+                }
+            }
+    		ul{
+    			display: flex;
+    			flex-direction:row;
+    			width:100%;
+    			height:100%;
+    			list-style: none;
+    		}
+    		li{
+    			flex:1;
+    			align-items:center;/*垂直居中*/
+    			flex-direction:column;
+    			display: flex;
+    			float: left;
+    			border:2px solid #ccc;
+    			font-size:30px;
+    			padding-top:15px;
+    			cursor:pointer;
+
+    		}
+    		i{
+    			margin:0 auto;
+    			zoom:1.5;
+    		}
+    		a{
+    			margin-top:-245px;
+    		}
+    		.pic1{
+    			background:url(../../assets/img/header_down_menu.png) no-repeat;
+    			background-position: 0px 0px;
+    			width:68px;
+    			height:75px;
+    			display: block;
+    		}
+    		.pic2{
+    			background:url(../../assets/img/header_down_menu.png) no-repeat;
+    			background-position: 0px -80px;
+    			width:68px;
+    			height:75px;
+    			display: block;
+    		}
+    		.pic3{
+    			background:url(../../assets/img/header_down_menu.png) no-repeat;
+    			background-position: 0px -154px;
+    			width:68px;
+    			height:75px;
+    			display: block;
+    		}
+    		#addIcon{
+    			position:absolute;
+    	    	top:9px;
+    	    	right:20px;
+    	    	display: block;
+    	    	height:37px;
+    	    	width:36px;
+    	    	zoom:1.5;
+    	    	transition: .2s ;
+    	    	background:url(../../assets/img/download.png);
+    	    	cursor: pointer;
+
+    		}
 }    
 
 section{
@@ -138,4 +226,40 @@ section{
 
 	}
 	
+}
+.show{
+    // display: block;
+    animation:kerwinshow 1s both;
+
+}
+
+
+@keyframes kerwinshow{
+    from{
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+
+    to{
+        transform: translateY(0px); 
+        opacity: 1;
+    }
+}
+
+.hide{
+    // display:none;
+    animation:kerwinhide 1s both;
+
+}
+
+@keyframes kerwinhide{
+    from{
+        transform: translateY(0px);
+        opacity: 1;
+    }
+
+    to{
+        transform: translateY(-100%);   
+        opacity: 0;
+    }
 }
