--- a/src/Component/App/index.scss
+++ b/src/Component/App/index.scss
@@ -83,7 +83,7 @@
                 position: fixed;
                 width: 100%;
                 height: 15%;
-                // left:0px;
+                transform-origin: top;
                 top:0px;
                 margin-top:84px;
                 background-color:#fff;
@@ -163,7 +163,7 @@
     	    	transition: .2s ;
     	    	background:url(../../assets/img/download.png);
     	    	cursor: pointer;
-
+                z-index:99px;
     		}
 }    
 
@@ -171,7 +171,7 @@ section{
 		    padding: 85px 0 0;
 		    width: 100%;
 		    flex: 1;
-		    overflow: auto;
+		    // overflow: auto;
 
 	}
 	footer{
@@ -236,12 +236,12 @@ section{
 
 @keyframes kerwinshow{
     from{
-        transform: translateY(-100%);
+        transform: scaleY(0);
         opacity: 0;
     }
 
     to{
-        transform: translateY(0px); 
+        transform: scaleY(1); 
         opacity: 1;
     }
 }
@@ -254,12 +254,12 @@ section{
 
 @keyframes kerwinhide{
     from{
-        transform: translateY(0px);
+        transform: scaleY(1);
         opacity: 1;
     }
 
     to{
-        transform: translateY(-100%);   
+        transform: scaleY(0);   
         opacity: 0;
     }
 }
