--- a/src/Component/Home/index.scss
+++ b/src/Component/Home/index.scss
@@ -103,9 +103,7 @@
 				text-align: center;
 				position: absolute;
 				#canvas{
-					position:absolute;
-					top: 0rem;
-					left: .6rem;
+					margin:-90px auto;
 				}
 				.up{
 					font-size: .17rem;
